[build-system]
requires = [
    "poetry-core==2.2.1",
    "poetry-dynamic-versioning==1.9.1",
]
build-backend = "poetry_dynamic_versioning.backend"

[project]
name = "meltanolabs-tap-github"
dynamic = [ "version" ]
description = "Singer tap for GitHub, built with the Singer SDK."
authors = [ { name = "Meltano and Meltano Community", email = "hello@meltano.com" } ]
maintainers = [
    { name = "Meltano and Meltano Community", email = "hello@meltano.com" },
    { name = "Edgar Ramírez-Mondragón", email = "edgarrm358@gmail.com" },
]
requires-python = ">=3.10"
license = "Apache-2.0"
license-files = [ "LICENSE" ]
keywords = ["Meltano", "Singer", "Meltano SDK", "Singer SDK", "ELT", "GitHub"]
readme = "README.md"
classifiers = [
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Programming Language :: Python :: Implementation :: CPython",
    "Typing :: Typed",
]
dependencies = [
    "beautifulsoup4~=4.14.2",
    "cryptography~=46.0.1",
    "nested-lookup~=0.2.25",
    "PyJWT~=2.10.1",
    "python-dateutil~=2.9",
    "requests~=2.32.3",
    "singer-sdk~=0.53.0",
]

[project.urls]
Homepage = "https://github.com/MeltanoLabs/tap-github"
Repository = "https://github.com/MeltanoLabs/tap-github"
"Issue Tracker" = "https://github.com/MeltanoLabs/tap-github/issues"

[project.scripts]
# CLI declaration
tap-github = 'tap_github.tap:cli'

[dependency-groups]
dev = [
    "mypy>=1.15.0",
    "pytest>=7.3.1",
    "requests-cache>=1.0.1",
    "types-beautifulsoup4>=4.12.0",
    "types-python-dateutil~=2.9.0",
    "types-requests>=2.30.0",
    "types-simplejson~=3.20.0",
]

[tool.poetry]
requires-poetry = ">=2.2"
packages = [
    { include = "tap_github", format = ["sdist", "wheel"] }
]
version = "0.0.0"

[tool.poetry-dynamic-versioning]
enable = true

[[tool.mypy.overrides]]
module = [
    "nested_lookup",
]
ignore_missing_imports = true

[tool.pytest]
minversion = "9.0.0"
markers = [
    "repo_list: mark a test as using a list of repos in config",
    "username_list: mark a test as using a list of usernames in config",
]

[tool.ruff.lint]
ignore = []
select = [
    "F",    # Pyflakes
    "E",    # pycodestyle (errors)
    "W",    # pycodestyle (warnings)
    "I",    # isort
    "N",    # pep8-naming
    "UP",   # pyupgrade
    "YTT",  # flake8-2020
    "ANN",  # flake8-annotations
    "B",    # flake8-bugbear
    "A",    # flake8-builtins
    "C4",   # flake8-comprehensions
    "DTZ",  # flake8-datetimez
    "FA",   # flake8-future-annotations
    "SIM",  # flake8-simplify
    "TC",   # flake8-type-checking
    "PERF", # Perflint
    "FURB", # refurb
    "RUF",  # Ruff-specific rules
]

[tool.ruff.lint.per-file-ignores]
"tap_github/tests/*" = ["ANN"]
