[project]
name = "meltanolabs-tap-github"
dynamic = [ "version" ]
description = "Singer tap for GitHub, built with the Singer SDK."
authors = [{ name = "Meltano and Meltano Community", email = "hello@meltano.com" }]
requires-python = ">=3.10"
readme = "README.md"
license = "Apache-2.0"
maintainers = [
    { name = "Meltano and Meltano Community", email = "hello@meltano.com" },
    { name = "Edgar Ramírez-Mondragón", email = "edgarrm358@gmail.com" },
]
keywords = [
    "Meltano",
    "Singer",
    "Meltano SDK",
    "Singer SDK",
    "ELT",
    "GitHub",
]
classifiers = [
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Programming Language :: Python :: Implementation :: CPython",
    "Typing :: Typed",
]
dependencies = [
    "beautifulsoup4~=4.14.2",
    "cryptography~=46.0.1",
    "nested-lookup~=0.2.25",
    "PyJWT~=2.10.1",
    "python-dateutil~=2.9",
    "requests~=2.32.3",
    "singer-sdk~=0.53.0",
]

[project.urls]
Homepage = "https://github.com/MeltanoLabs/tap-github"
Repository = "https://github.com/MeltanoLabs/tap-github"
"Issue Tracker" = "https://github.com/MeltanoLabs/tap-github/issues"

[project.scripts]
tap-github = "tap_github.tap:cli"

[build-system]
requires = [
    "hatchling>=1.28,<2",
    "hatch-vcs>=0.5",
]
build-backend = "hatchling.build"

[tool.hatch.version]
fallback-version = "0.0.0"
source = "vcs"

[tool.hatch.build.targets.sdist]
include = ["tap_github"]

[tool.hatch.build.targets.wheel]
include = ["tap_github"]

[tool.uv]
required-version = ">=0.9.17"

[tool.uv.sources]
singer-sdk = { git = "https://github.com/meltano/sdk.git", rev = "main" }

[dependency-groups]
dev = [
    { include-group = "test" },
    { include-group = "type" },
]
test = [
    "pytest~=9.0",
    "requests-cache>=1.0.1",
]
type = [
    { include-group = "test" },
    "mypy~=1.19.0",
    "ty>=0.0.13",
    "types-beautifulsoup4~=4.12",
    "types-python-dateutil~=2.9",
    "types-requests~=2.32",
    "types-simplejson~=3.20",
]

[tool.mypy]
enable_error_code = ["ignore-without-code", "redundant-expr", "truthy-bool"]
follow_untyped_imports = true
warn_redundant_casts = true
warn_unreachable = true
warn_unused_configs = true
warn_unused_ignores = true

[tool.pytest]
addopts = [
    "--durations=5",
    "-m",
    "not noconfig",
]
minversion = "9"
markers = [
    "noconfig: mark a test as not requiring a config",
    "repo_list: mark a test as using a list of repos in config",
    "username_list: mark a test as using a list of usernames in config",
]
testpaths = [
    "tap_github/tests",
]

[tool.ruff.lint]
ignore = []
select = [
    "F",    # Pyflakes
    "E",    # pycodestyle (errors)
    "W",    # pycodestyle (warnings)
    "I",    # isort
    "N",    # pep8-naming
    "UP",   # pyupgrade
    "YTT",  # flake8-2020
    "ANN",  # flake8-annotations
    "B",    # flake8-bugbear
    "A",    # flake8-builtins
    "C4",   # flake8-comprehensions
    "DTZ",  # flake8-datetimez
    "FA",   # flake8-future-annotations
    "SIM",  # flake8-simplify
    "TC",   # flake8-type-checking
    "PERF", # Perflint
    "FURB", # refurb
    "RUF",  # Ruff-specific rules
]

[tool.ruff.lint.per-file-ignores]
"tap_github/tests/*" = ["ANN"]

[tool.tox]
requires = [
    "tox>=4.32",
    "tox-gh>=1.6.1",
]
env_list = [
    "type",
    "3.14",
    "3.13",
    "3.12",
    "3.11",
    "3.10",
]

[tool.tox.gh.python]
"3.14" = ["type", "noconfig", "3.14"]
"3.13" = ["noconfig"]
"3.12" = ["noconfig"]
"3.11" = ["noconfig"]
"3.10" = ["noconfig"]

[tool.tox.env_run_base]
description = "Run test under {base_python}"
dependency_groups = [
  "test",
]
commands = [["pytest", "--capture=no"]]

[tool.tox.env.noconfig]
description = "validate that `tap-github --discover` works"
commands = [["pytest", "-m", "noconfig"]]

[tool.tox.env.type]
description = "run type check on code base"
dependency_groups = [
  "type",
]
commands = [
    ["mypy", "tap_github"],
    ["ty", "check", "tap_github"],
]
